# python-line-profiler

./: .gitignore  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  requirements.txt  setup.cfg
src/: extension.py  extension.ts  model.py
src/dependencies/: vscode-python.ts
test/: __init__.py  test_process.py  test_profile.py
