[bumpversion]
current_version = 0.2.0-dev0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[metadata]
name = python-line-profiler
version = file: VERSION
description = The python backend for the vscode extension, python-line-profiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerpetualHelp/python-line-profiler
author = Nicholas J Schaub
author_email = nicholas.j.schaub@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[isort]
profile = black

[bumpversion:part:release]
optional_value = _
first_value = dev
values = 
	dev
	_

[bumpversion:part:build]

[bumpversion:file:VERSION]

[bumpversion:file:README.md]
search = v{current_version}
replace = v{new_version}

[bumpversion:file:package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[flake8]
docstring-convention = google
max-line-length = 88
exclude = test/*
ignore = D105, W503, D100, D104, AZ100
extend-ignore = E203
